--- a/templates/welcome.hbs
+++ b/templates/welcome.hbs
@@ -4,7 +4,7 @@
   </head>
   <body>
     <img
-      src='../../../../../public/assets/images/billete-logo.png'
+      src='https://drive.google.com/uc?export=download&id=1_OCZGIh7yId_xOdHGz8GaEO8b80QNIhR'
       alt='Billete Logo'
     />
     <h1>Hola, </h1>
